# vnpy_sopt

./: .gitignore  setup.cfg
vnpy_sopt/api/: vnsoptmd.pyd  vnsopttd.pyd
vnpy_sopt/api/libs/: soptthostmduserapi_se.lib
vnpy_sopt/api/vnsopt/vnsoptmd/: CMakeLists.txt
vnpy_sopt/api/vnsopt/vnsopttd/: CMakeLists.txt  vnsopttd.cpp
